--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-telethon==1.34.0
-python-dotenv==1.0.0
-pydantic==2.5.2
+fastapi
+uvicorn
+telethon
+python-dotenv
+pydantic
